tests/parser/package.3.bad.error
error: Malformed package declaration
  --> test:2:1
   |
 2 |  (pancake test)
   |   ^^^^^^^ package declarations must start with `package`
