tests/parser/package.3.bad.coalton
;; BAD: invalid package decleration
(pancake test)
